--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ insert_final_newline = true
 # Set default charset
 [*.{go}]
 charset = utf-8
-indent_style = space
+indent_style = spaces
 indent_size = 4
 trim_trailing_whitespace = true
