--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,7 @@ insert_final_newline = true
 # Set default charset
 [*.{go}]
 charset = utf-8
-indent_style = spaces
 indent_size = 4
+tab_width = 4
+indent_style = space
 trim_trailing_whitespace = true
